build: optimize media

--- a/src/content/posts/2020-11-09-why-i-use-trello/index.mdx
+++ b/src/content/posts/2020-11-09-why-i-use-trello/index.mdx
@@ -44,17 +44,21 @@ import withincards from './2_within_cards.gif';
   alt="Trello card options including description, due date, checklists, labels, and more"
 />
 
+<br/>
+
 ### How I Use It
 
 There’s no strict rules regarding how you need to use Trello. Personally, I try to keep the number of boards I use limited and instead focus on organizing my life into boards that sometimes overlap with each other. For example, I have a board exclusively for schoolwork, which has some cards integrated from my side projects board so I can keep track of everything on my to-do list and avoid having tasks fall into the cracks of my schedule. I also have boards for various extracurriculars, making keeping track of them a much more smooth process than before I used Trello.
 
-import howIUseIt from './3_how_i_use_it.png';
+import howIUseIt from './3_how_i_use_it.jpg';
 
 <Image
   src={howIUseIt}
   layout="constrained"
   alt="Example of using Trello to organize schoolwork, side projects, and extracurricular activities"
 />
+
+<br/>
 
 ### Power(ing)-Up
 
