--- a/src/content/posts/2024-04-24-how-to-put-20k+-words-on-a-cheatsheet/index.mdx
+++ b/src/content/posts/2024-04-24-how-to-put-20k+-words-on-a-cheatsheet/index.mdx
@@ -29,8 +29,8 @@ The answer is surprisingly simple. But to get there, there's 3 things we need to
   Oh, and if you're looking to take a peek at what exactly we're going to learn how to make, well, **here's an example in it's full glory:**
 </Callout>
 
-import fullpage from './01-fullpage.png'
-import zoomed from './01-zoomed.png'
+import fullpage from './01-fullpage.jpg'
+import zoomed from './01-zoomed.jpg'
 
 <ImageGalleryCaption images={[
   { src: fullpage, caption: "Full page view of cheatsheet" },
@@ -77,8 +77,8 @@ On that last point, I took a quick search on Github[^gh] for any LaTeX cheatshee
 
 *A decent-looking LaTeX cheatsheet, albeit one that isn't necessarily the best use of space and is an absolute \*pain\* to edit in LaTeX.*
 
-import latexsheet0 from './latexsheet-0.png'
-import latexsheet1 from './latexsheet-1.png'
+import latexsheet0 from './latexsheet-0.jpg'
+import latexsheet1 from './latexsheet-1.jpg'
 
 <ImageGalleryCaption images={[
   { src: latexsheet0, caption: "Front page: sample LaTeX cheatsheet" },
