--- a/src/content/posts/2024-08-22-work-study-at-uoft/index.mdx
+++ b/src/content/posts/2024-08-22-work-study-at-uoft/index.mdx
@@ -14,8 +14,8 @@ import ImageZoom from '@/components/mdx/ImageZoom.astro';
 import { Image } from 'astro:assets';
 import { SITE } from '@/consts'
 
-import d1 from './04-new-work-study-job-dashboard.png';
-import d2 from './04-zoom-in.png';
+import d1 from './04-new-work-study-job-dashboard.jpg';
+import d2 from './04-zoom-in.jpg';
 
 ## A better way to view work study job postings at UofT
 
@@ -152,7 +152,7 @@ import i2 from './03-clnx-job-page.jpg';
   { src: i2, caption: "CLNx job listings page showing various job postings" },
 ]} columns={2} />
 
-import job_description_page from './03-example-job.png';
+import job_description_page from './03-example-job.jpg';
 
 <figure>
   <ImageZoom src={job_description_page} alt="What a job description page looks like on CLNx" class="rounded-xl"/>
